// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button component Loading state renders a loading button 1`] = `
@keyframes sxwho2l {
  0% {
    opacity: 0;
  }

  30% {
    opacity: 1;
  }

  50% {
    opacity: 1;
  }

  80% {
    opacity: 0;
  }

  100% {
    opacity: 0;
  }
}

.sxib16r {
  display: inline-block;
  fill: none;
  stroke: currentcolor;
  stroke-linecap: round;
  stroke-linejoin: round;
  stroke-width: 2;
  vertical-align: middle;
}

.sxib16rmbqqh--size-md {
  height: var(--sizes-2);
  width: var(--sizes-2);
}

.sxib16r-898e9 {
  margin-left: var(--space-3);
}

.sx03kze-ywt1o {
  opacity: 0;
  transition: opacity 150ms ease-out;
}

.sx2cs53 {
  display: flex;
}

.sx2cs53-gu4h1 {
  justify-content: center;
  opacity: 1;
  position: absolute;
  transition: opacity 150ms ease-out;
}

.sxe5oww {
  animation-name: sxwho2l;
  animation-duration: 1s;
  animation-fill-mode: both;
  animation-iteration-count: infinite;
  animation-timing-function: linear;
  background-color: currentColor;
  border-radius: var(--radii-round);
}

.sxe5oww:nth-child(1) {
  animation-delay: -300ms;
}

.sxe5oww:nth-child(2) {
  animation-delay: -150ms;
}

.sxe5oww:nth-child(3) {
  animation-delay: 0;
}

.sxe5oww4btw3--size-md {
  height: 6px;
  width: 6px;
  margin-left: 2px;
  margin-right: 2px;
}

.sxjzq4u {
  background: unset;
  border: none;
  border-radius: var(--radii-0);
  cursor: pointer;
  display: flex;
  justify-content: center;
  align-items: center;
  font-family: var(--fonts-sans);
  font-size: var(--fontSizes-md);
  font-weight: 500;
  height: var(--sizes-4);
  letter-spacing: 0.02em;
  line-height: 1.4;
  transition: all 125ms ease-out;
  text-decoration: none;
  padding-left: var(--space-4);
  padding-right: var(--space-4);
  padding-top: var(--space-2);
  padding-bottom: var(--space-2);
  white-space: nowrap;
  width: max-content;
}

.sxjzq4u[disabled] {
  opacity: 0.35;
  cursor: not-allowed;
}

.sxjzq4ulmkcj--isRounded-true {
  border-radius: var(--radii-round);
}

.sxjzq4u2jpbs--isLoading-true {
  cursor: not-allowed;
  opacity: 0.5;
}

.sxjzq4uxyrog--c2 {
  background-color: var(--colors-primary500);
  color: white;
}

.sxjzq4uxyrog--c2:not([disabled]):hover,
.sxjzq4uxyrog--c2:not([disabled]):focus {
  background-color: var(--colors-primary900);
}

.sxjzq4uxyrog--c2:active {
  background-color: var(--colors-primary500);
}

.sxjzq4uxyrog--c2[disabled] {
  background-color: var(--colors-tonal300);
  color: var(--colors-tonal600);
}

.sxjzq4u8heda--c2 {
  box-shadow: inset 0 0 0 2px;
  color: var(--colors-primary500);
  background-color: white;
}

.sxjzq4u8heda--c2:not([disabled]):hover,
.sxjzq4u8heda--c2:not([disabled]):focus {
  text-decoration: none;
  color: var(--colors-primary900);
  background-color: white;
}

.sxjzq4u8heda--c2:active {
  color: var(--colors-primary500);
}

.sxjzq4u8heda--c2[disabled] {
  background-color: white;
  color: var(--colors-primary900);
}

.sxjzq4u08yia--c2 {
  box-shadow: inset 0 0 0 2px;
  color: var(--colors-secondary500);
  background-color: white;
}

.sxjzq4u08yia--c2:not([disabled]):hover,
.sxjzq4u08yia--c2:not([disabled]):focus {
  text-decoration: none;
  color: var(--colors-secondary900);
  background-color: white;
}

.sxjzq4u08yia--c2:active {
  color: var(--colors-secondary500);
}

.sxjzq4u08yia--c2[disabled] {
  background-color: white;
  color: var(--colors-secondary900);
}

<div>
  <button
    class="sxjzq4u sxjzq4u03kze--theme-primary sxjzq4u03kze--appearance-solid sxjzq4u2jpbs--isLoading-true sxjzq4uxyrog--c2"
    type="button"
  >
    <div
      class="sx2cs53 sx2cs53-gu4h1"
      role="alert"
    >
      <span
        style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; word-wrap: normal;"
      >
        Loading
      </span>
      <div
        class="sxe5oww sxe5oww4btw3--size-md"
      />
      <div
        class="sxe5oww sxe5oww4btw3--size-md"
      />
      <div
        class="sxe5oww sxe5oww4btw3--size-md"
      />
    </div>
    <span
      class="sx03kze sx03kze-ywt1o"
    >
      BUTTON
    </span>
  </button>
</div>
`;

exports[`Button component renders a button 1`] = `
.sxjzq4u {
  background: unset;
  border: none;
  border-radius: var(--radii-0);
  cursor: pointer;
  display: flex;
  justify-content: center;
  align-items: center;
  font-family: var(--fonts-sans);
  font-size: var(--fontSizes-md);
  font-weight: 500;
  height: var(--sizes-4);
  letter-spacing: 0.02em;
  line-height: 1.4;
  transition: all 125ms ease-out;
  text-decoration: none;
  padding-left: var(--space-4);
  padding-right: var(--space-4);
  padding-top: var(--space-2);
  padding-bottom: var(--space-2);
  white-space: nowrap;
  width: max-content;
}

.sxjzq4u[disabled] {
  opacity: 0.35;
  cursor: not-allowed;
}

.sxjzq4uxyrog--c2 {
  background-color: var(--colors-primary500);
  color: white;
}

.sxjzq4uxyrog--c2:not([disabled]):hover,
.sxjzq4uxyrog--c2:not([disabled]):focus {
  background-color: var(--colors-primary900);
}

.sxjzq4uxyrog--c2:active {
  background-color: var(--colors-primary500);
}

.sxjzq4uxyrog--c2[disabled] {
  background-color: var(--colors-tonal300);
  color: var(--colors-tonal600);
}

<div>
  <button
    class="sxjzq4u sxjzq4u03kze--theme-primary sxjzq4u03kze--appearance-solid sxjzq4uxyrog--c2"
    type="button"
  >
    BUTTON
  </button>
</div>
`;

exports[`Button component renders a button with an icon 1`] = `
.sxib16r {
  display: inline-block;
  fill: none;
  stroke: currentcolor;
  stroke-linecap: round;
  stroke-linejoin: round;
  stroke-width: 2;
  vertical-align: middle;
}

.sxib16rmbqqh--size-md {
  height: var(--sizes-2);
  width: var(--sizes-2);
}

.sxib16r-898e9 {
  margin-left: var(--space-3);
}

.sxjzq4u {
  background: unset;
  border: none;
  border-radius: var(--radii-0);
  cursor: pointer;
  display: flex;
  justify-content: center;
  align-items: center;
  font-family: var(--fonts-sans);
  font-size: var(--fontSizes-md);
  font-weight: 500;
  height: var(--sizes-4);
  letter-spacing: 0.02em;
  line-height: 1.4;
  transition: all 125ms ease-out;
  text-decoration: none;
  padding-left: var(--space-4);
  padding-right: var(--space-4);
  padding-top: var(--space-2);
  padding-bottom: var(--space-2);
  white-space: nowrap;
  width: max-content;
}

.sxjzq4u[disabled] {
  opacity: 0.35;
  cursor: not-allowed;
}

.sxjzq4uxyrog--c2 {
  background-color: var(--colors-primary500);
  color: white;
}

.sxjzq4uxyrog--c2:not([disabled]):hover,
.sxjzq4uxyrog--c2:not([disabled]):focus {
  background-color: var(--colors-primary900);
}

.sxjzq4uxyrog--c2:active {
  background-color: var(--colors-primary500);
}

.sxjzq4uxyrog--c2[disabled] {
  background-color: var(--colors-tonal300);
  color: var(--colors-tonal600);
}

.sxjzq4u8heda--c2 {
  box-shadow: inset 0 0 0 2px;
  color: var(--colors-primary500);
  background-color: white;
}

.sxjzq4u8heda--c2:not([disabled]):hover,
.sxjzq4u8heda--c2:not([disabled]):focus {
  text-decoration: none;
  color: var(--colors-primary900);
  background-color: white;
}

.sxjzq4u8heda--c2:active {
  color: var(--colors-primary500);
}

.sxjzq4u8heda--c2[disabled] {
  background-color: white;
  color: var(--colors-primary900);
}

.sxjzq4u08yia--c2 {
  box-shadow: inset 0 0 0 2px;
  color: var(--colors-secondary500);
  background-color: white;
}

.sxjzq4u08yia--c2:not([disabled]):hover,
.sxjzq4u08yia--c2:not([disabled]):focus {
  text-decoration: none;
  color: var(--colors-secondary900);
  background-color: white;
}

.sxjzq4u08yia--c2:active {
  color: var(--colors-secondary500);
}

.sxjzq4u08yia--c2[disabled] {
  background-color: white;
  color: var(--colors-secondary900);
}

<div>
  <button
    class="sxjzq4u sxjzq4u03kze--theme-primary sxjzq4u03kze--appearance-solid sxjzq4uxyrog--c2"
    type="button"
  >
    BUTTON 
    <svg
      aria-hidden="true"
      class="sxib16r sxib16rmbqqh--size-md sxib16r-898e9"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <polyline
        points="4 13 9 18 20 7"
      />
    </svg>
  </button>
</div>
`;

exports[`Button component renders a disabled button 1`] = `
.sxjzq4u {
  background: unset;
  border: none;
  border-radius: var(--radii-0);
  cursor: pointer;
  display: flex;
  justify-content: center;
  align-items: center;
  font-family: var(--fonts-sans);
  font-size: var(--fontSizes-md);
  font-weight: 500;
  height: var(--sizes-4);
  letter-spacing: 0.02em;
  line-height: 1.4;
  transition: all 125ms ease-out;
  text-decoration: none;
  padding-left: var(--space-4);
  padding-right: var(--space-4);
  padding-top: var(--space-2);
  padding-bottom: var(--space-2);
  white-space: nowrap;
  width: max-content;
}

.sxjzq4u[disabled] {
  opacity: 0.35;
  cursor: not-allowed;
}

.sxjzq4uxyrog--c2 {
  background-color: var(--colors-primary500);
  color: white;
}

.sxjzq4uxyrog--c2:not([disabled]):hover,
.sxjzq4uxyrog--c2:not([disabled]):focus {
  background-color: var(--colors-primary900);
}

.sxjzq4uxyrog--c2:active {
  background-color: var(--colors-primary500);
}

.sxjzq4uxyrog--c2[disabled] {
  background-color: var(--colors-tonal300);
  color: var(--colors-tonal600);
}

.sxjzq4u8heda--c2 {
  box-shadow: inset 0 0 0 2px;
  color: var(--colors-primary500);
  background-color: white;
}

.sxjzq4u8heda--c2:not([disabled]):hover,
.sxjzq4u8heda--c2:not([disabled]):focus {
  text-decoration: none;
  color: var(--colors-primary900);
  background-color: white;
}

.sxjzq4u8heda--c2:active {
  color: var(--colors-primary500);
}

.sxjzq4u8heda--c2[disabled] {
  background-color: white;
  color: var(--colors-primary900);
}

<div>
  <button
    class="sxjzq4u sxjzq4u03kze--theme-primary sxjzq4u03kze--appearance-solid sxjzq4uxyrog--c2"
    disabled=""
    type="button"
  >
    BUTTON
  </button>
</div>
`;

exports[`Button component renders a disabled secondary outline button 1`] = `
.sxjzq4u {
  background: unset;
  border: none;
  border-radius: var(--radii-0);
  cursor: pointer;
  display: flex;
  justify-content: center;
  align-items: center;
  font-family: var(--fonts-sans);
  font-size: var(--fontSizes-md);
  font-weight: 500;
  height: var(--sizes-4);
  letter-spacing: 0.02em;
  line-height: 1.4;
  transition: all 125ms ease-out;
  text-decoration: none;
  padding-left: var(--space-4);
  padding-right: var(--space-4);
  padding-top: var(--space-2);
  padding-bottom: var(--space-2);
  white-space: nowrap;
  width: max-content;
}

.sxjzq4u[disabled] {
  opacity: 0.35;
  cursor: not-allowed;
}

.sxjzq4uxyrog--c2 {
  background-color: var(--colors-primary500);
  color: white;
}

.sxjzq4uxyrog--c2:not([disabled]):hover,
.sxjzq4uxyrog--c2:not([disabled]):focus {
  background-color: var(--colors-primary900);
}

.sxjzq4uxyrog--c2:active {
  background-color: var(--colors-primary500);
}

.sxjzq4uxyrog--c2[disabled] {
  background-color: var(--colors-tonal300);
  color: var(--colors-tonal600);
}

.sxjzq4u8heda--c2 {
  box-shadow: inset 0 0 0 2px;
  color: var(--colors-primary500);
  background-color: white;
}

.sxjzq4u8heda--c2:not([disabled]):hover,
.sxjzq4u8heda--c2:not([disabled]):focus {
  text-decoration: none;
  color: var(--colors-primary900);
  background-color: white;
}

.sxjzq4u8heda--c2:active {
  color: var(--colors-primary500);
}

.sxjzq4u8heda--c2[disabled] {
  background-color: white;
  color: var(--colors-primary900);
}

.sxjzq4u08yia--c2 {
  box-shadow: inset 0 0 0 2px;
  color: var(--colors-secondary500);
  background-color: white;
}

.sxjzq4u08yia--c2:not([disabled]):hover,
.sxjzq4u08yia--c2:not([disabled]):focus {
  text-decoration: none;
  color: var(--colors-secondary900);
  background-color: white;
}

.sxjzq4u08yia--c2:active {
  color: var(--colors-secondary500);
}

.sxjzq4u08yia--c2[disabled] {
  background-color: white;
  color: var(--colors-secondary900);
}

<div>
  <button
    class="sxjzq4u sxjzq4u03kze--theme-secondary sxjzq4u03kze--appearance-outline sxjzq4u08yia--c2"
    disabled=""
    type="button"
  >
    BUTTON
  </button>
</div>
`;

exports[`Button component renders a outline button 1`] = `
.sxjzq4u {
  background: unset;
  border: none;
  border-radius: var(--radii-0);
  cursor: pointer;
  display: flex;
  justify-content: center;
  align-items: center;
  font-family: var(--fonts-sans);
  font-size: var(--fontSizes-md);
  font-weight: 500;
  height: var(--sizes-4);
  letter-spacing: 0.02em;
  line-height: 1.4;
  transition: all 125ms ease-out;
  text-decoration: none;
  padding-left: var(--space-4);
  padding-right: var(--space-4);
  padding-top: var(--space-2);
  padding-bottom: var(--space-2);
  white-space: nowrap;
  width: max-content;
}

.sxjzq4u[disabled] {
  opacity: 0.35;
  cursor: not-allowed;
}

.sxjzq4uxyrog--c2 {
  background-color: var(--colors-primary500);
  color: white;
}

.sxjzq4uxyrog--c2:not([disabled]):hover,
.sxjzq4uxyrog--c2:not([disabled]):focus {
  background-color: var(--colors-primary900);
}

.sxjzq4uxyrog--c2:active {
  background-color: var(--colors-primary500);
}

.sxjzq4uxyrog--c2[disabled] {
  background-color: var(--colors-tonal300);
  color: var(--colors-tonal600);
}

.sxjzq4u8heda--c2 {
  box-shadow: inset 0 0 0 2px;
  color: var(--colors-primary500);
  background-color: white;
}

.sxjzq4u8heda--c2:not([disabled]):hover,
.sxjzq4u8heda--c2:not([disabled]):focus {
  text-decoration: none;
  color: var(--colors-primary900);
  background-color: white;
}

.sxjzq4u8heda--c2:active {
  color: var(--colors-primary500);
}

.sxjzq4u8heda--c2[disabled] {
  background-color: white;
  color: var(--colors-primary900);
}

<div>
  <button
    class="sxjzq4u sxjzq4u03kze--theme-primary sxjzq4u03kze--appearance-outline sxjzq4u8heda--c2"
    type="button"
  >
    BUTTON
  </button>
</div>
`;

exports[`Button component renders a rounded button  1`] = `
.sxib16r {
  display: inline-block;
  fill: none;
  stroke: currentcolor;
  stroke-linecap: round;
  stroke-linejoin: round;
  stroke-width: 2;
  vertical-align: middle;
}

.sxib16rmbqqh--size-md {
  height: var(--sizes-2);
  width: var(--sizes-2);
}

.sxib16r-898e9 {
  margin-left: var(--space-3);
}

.sxjzq4u {
  background: unset;
  border: none;
  border-radius: var(--radii-0);
  cursor: pointer;
  display: flex;
  justify-content: center;
  align-items: center;
  font-family: var(--fonts-sans);
  font-size: var(--fontSizes-md);
  font-weight: 500;
  height: var(--sizes-4);
  letter-spacing: 0.02em;
  line-height: 1.4;
  transition: all 125ms ease-out;
  text-decoration: none;
  padding-left: var(--space-4);
  padding-right: var(--space-4);
  padding-top: var(--space-2);
  padding-bottom: var(--space-2);
  white-space: nowrap;
  width: max-content;
}

.sxjzq4u[disabled] {
  opacity: 0.35;
  cursor: not-allowed;
}

.sxjzq4ulmkcj--isRounded-true {
  border-radius: var(--radii-round);
}

.sxjzq4uxyrog--c2 {
  background-color: var(--colors-primary500);
  color: white;
}

.sxjzq4uxyrog--c2:not([disabled]):hover,
.sxjzq4uxyrog--c2:not([disabled]):focus {
  background-color: var(--colors-primary900);
}

.sxjzq4uxyrog--c2:active {
  background-color: var(--colors-primary500);
}

.sxjzq4uxyrog--c2[disabled] {
  background-color: var(--colors-tonal300);
  color: var(--colors-tonal600);
}

.sxjzq4u8heda--c2 {
  box-shadow: inset 0 0 0 2px;
  color: var(--colors-primary500);
  background-color: white;
}

.sxjzq4u8heda--c2:not([disabled]):hover,
.sxjzq4u8heda--c2:not([disabled]):focus {
  text-decoration: none;
  color: var(--colors-primary900);
  background-color: white;
}

.sxjzq4u8heda--c2:active {
  color: var(--colors-primary500);
}

.sxjzq4u8heda--c2[disabled] {
  background-color: white;
  color: var(--colors-primary900);
}

.sxjzq4u08yia--c2 {
  box-shadow: inset 0 0 0 2px;
  color: var(--colors-secondary500);
  background-color: white;
}

.sxjzq4u08yia--c2:not([disabled]):hover,
.sxjzq4u08yia--c2:not([disabled]):focus {
  text-decoration: none;
  color: var(--colors-secondary900);
  background-color: white;
}

.sxjzq4u08yia--c2:active {
  color: var(--colors-secondary500);
}

.sxjzq4u08yia--c2[disabled] {
  background-color: white;
  color: var(--colors-secondary900);
}

<div>
  <button
    class="sxjzq4u sxjzq4u03kze--theme-primary sxjzq4u03kze--appearance-solid sxjzq4ulmkcj--isRounded-true sxjzq4uxyrog--c2"
    type="button"
  >
    BUTTON 
    <svg
      aria-hidden="true"
      class="sxib16r sxib16rmbqqh--size-md sxib16r-898e9"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <polyline
        points="4 13 9 18 20 7"
      />
    </svg>
  </button>
</div>
`;
